--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">CoffeeBrake3</string>
+    <string name="namehint">Name</string>
+    <string name="toppings">Toppings:</string>
+    <string name="whippedcream">Whipped Cream</string>
+    <string name="chocolatetop">Chocolate Top</string>
+    <string name="quantity">Quantity:</string>
+    <string name="order">Order</string>
+    <string name="total">Total = $0</string>
+    <string name="morethan10cups">You cant order more than 10 cups of coffee</string>
+    <string name="lessthan0cups">You cant order less than 0 cups of coffee</string>
 </resources>
