--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,7 +7,10 @@
     <string name="chocolatetop">Шоколадный топ</string>
     <string name="quantity">Количество:</string>
     <string name="order">Заказать</string>
-    <string name="total">Итого = $0</string>
+    <string name="total">"Итого "</string>
     <string name="lessthan0cups">Вы не можете заказать меньше 0 чашек кофе</string>
     <string name="morethan10cups">Вы не можете заказать больше 10 чашек кофе</string>
+    <string name="thankyou">Спасибо!</string>
+    <string name="True">Да</string>
+    <string name="False">Нет</string>
 </resources>
