--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,10 @@
     <string name="chocolatetop">Chocolate Top</string>
     <string name="quantity">Quantity:</string>
     <string name="order">Order</string>
-    <string name="total">Total = $0</string>
+    <string name="total">"Total "</string>
     <string name="morethan10cups">You cant order more than 10 cups of coffee</string>
     <string name="lessthan0cups">You cant order less than 0 cups of coffee</string>
+    <string name="thankyou">Thank you!</string>
+    <string name="True">True</string>
+    <string name="False">False</string>
 </resources>
